--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </section>
             <section id="outputSection" style="display : none;">
                 <div id="totalTime">
-                    <p>At <span id="currentTime"></span> on <span id="currentDate"></span> <span id="pastPresent">it is</span></p>
+                    <p>At <span id="currentTime"></span> on <span id="currentDate"></span> <span id="pastPresent">it has been</span></p>
                     <p id="dayTimer" class="outputText"></p>
                     <p class="or">or</p>
                     <p id="hourTimer" class="outputText"></p>
@@ -41,7 +41,7 @@
                     <p id="minuteTimer" class="outputText"></p>
                     <p class="or">or</p>
                     <p id="secondTimer" class="outputText"></p>
-                    <p id="untilSince">until</p>
+                    <p id="untilSince">since</p>
                     <p id="eventNameOut"></p>
                 </div>
             </section>
