--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                     <input type="date" id="userDate">
                     <label>Time:</label>
                     <input id="userTime" type="time">
-                    <input type="Submit" id="submitButton" value="Submit">
+                    <input type="Submit" id="submitButton" class="button" value="Submit">
+                    <input type="button" id="clearButton" class="button" value="Clear All">
                 </form>    
                 <p style="margin-bottom: 5px">If no time is selected it will default to midnight on your selected date.</p>
             </section>
